--- a/index.html
+++ b/index.html
@@ -8,30 +8,40 @@
   <link rel="stylesheet" href="./styles.css">
   <script defer src="./script.js"></script>
   <title>Frontend Mentor | Intro section with dropdown navigation</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <nav class="navbar" id="navbar">
+    <img src="./images/logo.svg" alt="snap logo top left navbar" class="nav-logo">
+    <ul class="nav-options">
+      <li class="nav-item">Features</li>
+      <li class="nav-item">Company</li> 
+      <li class="nav-item">Careers</li> 
+      <li class="nav-item">About</li>
+    
+    
+    <li class="nav-item">Login</li>
+    <li class="nav-item">Register</li>
+  </ul>
+  </nav>
 
-  Features
-  Company
-  Careers
-  About
-
-  Login
-  Register
-
-  Make remote work
-
-  Get your team in sync, no matter your location. Streamline processes, 
-  create team rituals, and watch productivity soar.
-
-  Learn more
-  
+  <section class="container">
+    <header id="main-header">
+      <h1 id="main-text">
+        Make remote work
+      </h1>
+    </header>
+    <div class="about-text">
+      <p>
+        Get your team in sync, no matter your location. Streamline processes, 
+        create team rituals, and watch productivity soar.
+      </p>
+    </div>
+    <div class="buttonContainer">
+     <button class="btn" id="btn">
+      Learn more
+    </button>
+    </div>
+  </section>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
