navbar items aligned to left

--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
 </head>
 <body>
   <nav class="navbar" id="navbar">
-    <img src="./images/logo.svg" alt="snap logo top left navbar" class="nav-logo">
-    <ul class="nav-options">
-      <li class="nav-item">Features</li>
-      <li class="nav-item">Company</li> 
-      <li class="nav-item">Careers</li> 
-      <li class="nav-item">About</li>
-    
-    
-      <li class="nav-item">Login</li>
-      <li class="nav-item">Register</li>
-    </ul>
+    <div class="navLeft">
+      <ul class="nav-items">
+        <img src="./images/logo.svg" alt="snap logo top left navbar" class="nav-logo">
+        <li class="nav-item">Features</li>
+        <li class="nav-item">Company</li> 
+        <li class="nav-item">Careers</li> 
+        <li class="nav-item">About</li>
+      </ul>
+    </div>
+    <div class="navRight">
+      <button>Login</button>
+      <button>Register</button>
+    </div>
   </nav>
 
   <section class="container">
