--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>  
   <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/989dcd78de.js" crossorigin="anonymous"></script>
   <script defer src="./script.js"></script>
   <title>Frontend Mentor | Intro section with dropdown navigation</title>
 </head>
@@ -16,15 +17,31 @@
     <div class="navLeft">
       <ul class="nav-items">
         <img src="./images/logo.svg" alt="snap logo top left navbar" class="nav-logo">
-        <li class="nav-item">Features</li>
-        <li class="nav-item">Company</li> 
-        <li class="nav-item">Careers</li> 
-        <li class="nav-item">About</li>
+        <a href="#">
+          <li class="nav-item">
+              Features 
+            <i class="fa-solid fa-angle-down fa-xs"></i>
+            <i class="fa-solid fa-angle-up fa-xs"></i>
+          </li>
+        </a>
+        <a href="">
+          <li class="nav-item">
+              Company 
+            <i class="fa-solid fa-angle-down fa-xs"></i>
+            <i class="fa-solid fa-angle-up fa-xs"></i>
+          </li>
+        </a> 
+        <a href="#">
+          <li class="nav-item">Careers</li> 
+        </a>
+        <a href="#">
+          <li class="nav-item">About</li>
+        </a>
       </ul>
     </div>
     <div class="navRight">
-      <button>Login</button>
-      <button>Register</button>
+      <a href="#" class="loginBtn">Login</a>
+      <button class="registerBtn">Register</button>
     </div>
   </nav>
 
