minor changes to navbar

--- a/index.html
+++ b/index.html
@@ -17,26 +17,31 @@
     <div class="navLeft">
       <ul class="nav-items">
         <img src="./images/logo.svg" alt="snap logo top left navbar" class="nav-logo">
-        <a href="#">
+        
           <li class="nav-item">
+            <a href="#">
               Features 
-            <i class="fa-solid fa-angle-down fa-xs"></i>
-            <i class="fa-solid fa-angle-up fa-xs"></i>
+              <i class="fa-solid fa-angle-down fa-xs"></i>
+              <i class="fa-solid fa-angle-up fa-xs"></i>
+            </a>
           </li>
-        </a>
-        <a href="">
           <li class="nav-item">
-              Company 
-            <i class="fa-solid fa-angle-down fa-xs"></i>
-            <i class="fa-solid fa-angle-up fa-xs"></i>
+            <a href="#">
+              Company
+              <i class="fa-solid fa-angle-down fa-xs"></i>
+              <i class="fa-solid fa-angle-up fa-xs"></i>
+            </a>
           </li>
-        </a> 
-        <a href="#">
-          <li class="nav-item">Careers</li> 
-        </a>
-        <a href="#">
-          <li class="nav-item">About</li>
-        </a>
+          <li class="nav-item">
+            <a href="#">
+              Careers
+            </a>
+          </li> 
+          <li class="nav-item">
+            <a href="#">
+              About
+            </a>
+          </li>
       </ul>
     </div>
     <div class="navRight">
