--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
   <nav class="navbar" id="navbar">
     <div class="navLeft">
       <ul class="nav-items">
-        <img src="./images/logo.svg" alt="snap logo top left navbar" class="nav-logo">
-        
+        <a href="#">
+          <img src="./images/logo.svg" alt="snap logo top left navbar" class="nav-logo">
+        </a>
           <li class="nav-item">
             <a href="#">
               Features 
