--- a/index.html
+++ b/index.html
@@ -71,13 +71,19 @@
         Learn more
       </button>
       </div>
+      <div>
+        <img src="./images/client-databiz.svg" alt="">
+        <img src="./images/client-audiophile.svg" alt="">
+        <img src="./images/client-meet.svg" alt="">
+        <img src="./images/client-maker.svg" alt="">
+      </div>
     </div>
     <div class="innerRightCont">
       <picture>
-        <source media="(min-width: 576px)" srcset="./images/image-hero-desktop.png">
-        <img class="desktopMobile" src="./images/image-hero-mobile.png" alt="hero image for mobile">
+        <source media="(max-width: 576px)" srcset="./images/image-hero-mobile.png">
+        <img class="desktopHero" src="./images/image-hero-desktop.png" alt="hero image for mobile">
       </picture>
-    </div>
+    </div> 
   </section>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
