h1 bigger and parent el

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="innerLeftCont">
       <header id="main-header">
         <h1 id="main-text">
-          Make remote work
+          Make <br>remote work
         </h1>
       </header>
       <div class="about-text">
