--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
           Make <br>remote work
         </h1>
       </header>
-      <div class="about-text">
-        <p>
-          Get your team in sync, no matter your location. Streamline processes, 
-          create team rituals, and watch productivity soar.
+      <div class="aboutTextCont">
+        <p class="aboutText">
+          Get your team in sync, no matter your location.<br> Streamline processes, 
+          create team rituals, and<br> watch productivity soar.
         </p>
       </div>
       <div class="buttonContainer">
@@ -66,11 +66,11 @@
         Learn more
       </button>
       </div>
-      <div>
-        <img src="./images/client-databiz.svg" alt="">
-        <img src="./images/client-audiophile.svg" alt="">
-        <img src="./images/client-meet.svg" alt="">
-        <img src="./images/client-maker.svg" alt="">
+      <div class="testimonialCont">
+        <img src="./images/client-databiz.svg" alt="databiz logo 1">
+        <img src="./images/client-audiophile.svg" alt="audiophile logo 2">
+        <img src="./images/client-meet.svg" alt="meet logo 3">
+        <img src="./images/client-maker.svg" alt="maker logo 4">
       </div>
     </div>
     <div class="innerRightCont">
