learn more button styled

--- a/index.html
+++ b/index.html
@@ -57,14 +57,15 @@
       </header>
       <div class="aboutTextCont">
         <p class="aboutText">
-          Get your team in sync, no matter your location.<br> Streamline processes, 
-          create team rituals, and<br> watch productivity soar.
+          Get your team in sync, no matter your location.<br>
+          Streamline processes, create team rituals, and<br>
+          watch productivity soar.
         </p>
       </div>
       <div class="buttonContainer">
-      <button class="btn" id="btn">
-        Learn more
-      </button>
+        <button class="learnMoreBtn">
+          Learn more
+        </button>
       </div>
       <div class="testimonialCont">
         <img src="./images/client-databiz.svg" alt="databiz logo 1">
