testimonial section done

--- a/index.html
+++ b/index.html
@@ -68,10 +68,18 @@
         </button>
       </div>
       <div class="testimonialCont">
-        <img src="./images/client-databiz.svg" alt="databiz logo 1">
-        <img src="./images/client-audiophile.svg" alt="audiophile logo 2">
-        <img src="./images/client-meet.svg" alt="meet logo 3">
-        <img src="./images/client-maker.svg" alt="maker logo 4">
+        <div class="flex-align">
+          <img class="testimonials" src="./images/client-databiz.svg" alt="databiz logo 1">
+        </div>
+        <div class="flex-align">
+          <img class="testimonials" src="./images/client-audiophile.svg" alt="audiophile logo 2">
+        </div>
+        <div class="flex-align">
+          <img class="testimonials" src="./images/client-meet.svg" alt="meet logo 3">
+        </div>
+        <div class="flex-align">
+          <img class="testimonials" src="./images/client-maker.svg" alt="maker logo 4">
+        </div>
       </div>
     </div>
     <div class="innerRightCont">
