--- a/index.html
+++ b/index.html
@@ -18,28 +18,30 @@
         <a href="#">
           <img src="./images/logo.svg" alt="snap logo top left navbar" class="nav-logo">
         </a>
-          <li class="nav-item">
-            <a href="#">
-              Features 
-              <img src="./images/icon-arrow-down.svg" alt="">
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="#">
-              Company
-              <img src="./images/icon-arrow-down.svg" alt="">
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="#">
-              Careers
-            </a>
-          </li> 
-          <li class="nav-item">
-            <a href="#">
-              About
-            </a>
-          </li>
+        <li class="nav-item" id="features">
+          <a href="#">
+            Features 
+            <img class="arrowDown" id="arrowDown" src="./images/icon-arrow-down.svg" alt="arrow down image">
+            <img class="arrowUp" id="arrowUp" src="./images/icon-arrow-up.svg" alt="arrow up image">
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#">
+            Company
+            <img src="./images/icon-arrow-down.svg" alt="arrow down image">
+            <img class="arrowUp" src="./images/icon-arrow-up.svg" alt="arrow up image">
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#">
+            Careers
+          </a>
+        </li> 
+        <li class="nav-item">
+          <a href="#">
+            About
+          </a>
+        </li>
       </ul>
     </div>
     <div class="navRight">
