event listeners on feature an comp

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li class="nav-item">
           <a href="#">
             Company
-            <img src="./images/icon-arrow-down.svg" alt="arrow down image">
+            <img class="arrowDown" src="./images/icon-arrow-down.svg" alt="arrow down image">
             <img class="arrowUp" src="./images/icon-arrow-up.svg" alt="arrow up image">
           </a>
         </li>
