testing out querySelectors

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img class="arrowUp" id="arrowUp" src="./images/icon-arrow-up.svg" alt="arrow up image">
           </a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" id="company">
           <a href="#">
             Company
             <img class="arrowDown" src="./images/icon-arrow-down.svg" alt="arrow down image">
