utilized onmouseover and onmouseout for imgs

--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
   <nav class="navbar" id="navbar">
     <div class="navLeft">
       <ul class="nav-items">
-        <a href="#">
+        <a href="#" onmouseover="getArrowUpImg()" onmouseout="getArrowDownImg()">
           <img src="./images/logo.svg" alt="snap logo top left navbar" class="nav-logo">
         </a>
         <li class="nav-item" id="features">
           <a href="#">
-            Features 
-            <img class="arrowDown" id="arrowDown" src="./images/icon-arrow-down.svg" alt="arrow down image">
-            <img class="arrowUp" id="arrowUp" src="./images/icon-arrow-up.svg" alt="arrow up image">
+            <span>Features</span>
+            <img class="arrowDown" src="./images/icon-arrow-down.svg" alt="arrow down image">
+            <!-- <img class="arrowUp" id="arrowUp" src="./images/icon-arrow-up.svg" alt="arrow up image"> -->
           </a>
         </li>
         <li class="nav-item" id="company">
-          <a href="#">
-            Company
+          <a href="#" onmouseover="getArrowUpImg()" onmouseout="getArrowDownImg()">
+           <span>Company</span>
             <img class="arrowDown" src="./images/icon-arrow-down.svg" alt="arrow down image">
-            <img class="arrowUp" src="./images/icon-arrow-up.svg" alt="arrow up image">
+            <!-- <img class="arrowUp" src="./images/icon-arrow-up.svg" alt="arrow up image"> -->
           </a>
         </li>
         <li class="nav-item">
