--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
   <nav class="navbar" id="navbar">
     <div class="navLeft">
       <ul class="nav-items">
-        <a href="#" onmouseover="getArrowUpImg()" onmouseout="getArrowDownImg()">
+        <a href="#">
           <img src="./images/logo.svg" alt="snap logo top left navbar" class="nav-logo">
         </a>
         <li class="nav-item" id="features">
-          <a href="#">
-            <span>Features</span>
+          <a href="#" onmouseover="getArrowUpImg()" onmouseout="getArrowDownImg()">
+            Features
             <img class="arrowDown" src="./images/icon-arrow-down.svg" alt="arrow down image">
             <!-- <img class="arrowUp" id="arrowUp" src="./images/icon-arrow-up.svg" alt="arrow up image"> -->
           </a>
         </li>
         <li class="nav-item" id="company">
           <a href="#" onmouseover="getArrowUpImg()" onmouseout="getArrowDownImg()">
-           <span>Company</span>
+           Company
             <img class="arrowDown" src="./images/icon-arrow-down.svg" alt="arrow down image">
             <!-- <img class="arrowUp" src="./images/icon-arrow-up.svg" alt="arrow up image"> -->
           </a>
