refactored js for each element on hover

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
           <img src="./images/logo.svg" alt="snap logo top left navbar" class="nav-logo">
         </a>
         <li class="nav-item" id="features">
-          <a href="#" onmouseover="getArrowUpImg()" onmouseout="getArrowDownImg()">
+          <a href="#" onmouseover="getArrowUpImg1()" onmouseout="getArrowDownImg1()">
             Features
             <img class="arrowDown" src="./images/icon-arrow-down.svg" alt="arrow down image">
             <!-- <img class="arrowUp" id="arrowUp" src="./images/icon-arrow-up.svg" alt="arrow up image"> -->
           </a>
         </li>
         <li class="nav-item" id="company">
-          <a href="#" onmouseover="getArrowUpImg()" onmouseout="getArrowDownImg()">
+          <a href="#" onmouseover="getArrowUpImg2()" onmouseout="getArrowDownImg2()">
            Company
             <img class="arrowDown" src="./images/icon-arrow-down.svg" alt="arrow down image">
             <!-- <img class="arrowUp" src="./images/icon-arrow-up.svg" alt="arrow up image"> -->
