--- a/index.html
+++ b/index.html
@@ -22,14 +22,32 @@
           <a href="#" onmouseover="getArrowUpImg1()" onmouseout="getArrowDownImg1()">
             Features
             <img class="arrowDown" src="./images/icon-arrow-down.svg" alt="arrow down image">
-            <!-- <img class="arrowUp" id="arrowUp" src="./images/icon-arrow-up.svg" alt="arrow up image"> -->
           </a>
+          <div class="dropdownFeatures">
+            <ul class="ul-features">
+              <li>
+                <img src="./images/icon-todo.svg" alt="to do list icon">
+                Todo List
+              </li>
+              <li>
+                <img src="./images/icon-calendar.svg" alt="calendar icon">
+                Calendar
+              </li>
+              <li>
+                <img src="./images/icon-reminders.svg" alt="reminders icon">
+                Reminders
+              </li>
+              <li>
+                <img src="./images/icon-planning.svg" alt="planning icon">
+                Planning
+              </li>
+            </ul>
+          </div>
         </li>
         <li class="nav-item" id="company">
           <a href="#" onmouseover="getArrowUpImg2()" onmouseout="getArrowDownImg2()">
            Company
-            <img class="arrowDown" src="./images/icon-arrow-down.svg" alt="arrow down image">
-            <!-- <img class="arrowUp" src="./images/icon-arrow-up.svg" alt="arrow up image"> -->
+            <img class="arrowDown" src="./images/icon-arrow-down.svg" alt="arrow down image"> 
           </a>
         </li>
         <li class="nav-item">
