added company dropdown

--- a/index.html
+++ b/index.html
@@ -49,6 +49,19 @@
            Company
             <img class="arrowDown" src="./images/icon-arrow-down.svg" alt="arrow down image"> 
           </a>
+          <div class="dropdownCompany">
+            <ul class="ul-company">
+              <li>
+                History
+              </li>
+              <li>
+                Our Team
+              </li>
+              <li>
+                Blog
+              </li>
+            </ul>
+          </div>
         </li>
         <li class="nav-item">
           <a href="#">
