margin to icons

--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
           <div class="dropdownFeatures">
             <ul class="ul-features">
               <li>
-                <img src="./images/icon-todo.svg" alt="to do list icon">
+                <img class="dropdownIcon" src="./images/icon-todo.svg" alt="to do list icon"> 
                 Todo List
               </li>
               <li>
-                <img src="./images/icon-calendar.svg" alt="calendar icon">
+                <img class="dropdownIcon" src="./images/icon-calendar.svg" alt="calendar icon"> 
                 Calendar
               </li>
               <li>
-                <img src="./images/icon-reminders.svg" alt="reminders icon">
+                <img class="dropdownIcon" src="./images/icon-reminders.svg" alt="reminders icon"> 
                 Reminders
               </li>
               <li>
-                <img src="./images/icon-planning.svg" alt="planning icon">
+                <img class="dropdownIcon" src="./images/icon-planning.svg" alt="planning icon"> 
                 Planning
               </li>
             </ul>
