feature and company dropdown down

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             Features
             <img class="arrowDown" src="./images/icon-arrow-down.svg" alt="arrow down image">
           </a>
-          <div class="dropdownFeatures">
+          <div class="dropdownFeatures" id="dropdownFeatures">
             <ul class="ul-features">
               <li>
                 <img class="dropdownIcon" src="./images/icon-todo.svg" alt="to do list icon"> 
@@ -49,7 +49,7 @@
            Company
             <img class="arrowDown" src="./images/icon-arrow-down.svg" alt="arrow down image"> 
           </a>
-          <div class="dropdownCompany">
+          <div class="dropdownCompany" id="dropdownCompany">
             <ul class="ul-company">
               <li>
                 History
