displaying hamburger menu

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     <div class="navRight">
       <a href="#" class="loginBtn">Login</a>
       <button class="registerBtn">Register</button>
+      <img class="hamburgerMenu" src="./images/icon-menu.svg" alt="hamburger menu">
     </div>
   </nav>
 
