--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <title>Frontend Mentor | Intro section with dropdown navigation</title>
 </head>
 <body>
+  <main class="mainContent">
   <nav class="navbar" id="navbar">
     <div class="navLeft">
       <ul class="nav-items">
@@ -123,6 +124,7 @@
       </picture>
     </div> 
   </section>
+</main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Michael Reyes</a>.
