feat. mobile popup nav (in progress)

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 <body>
   <main class="mainContent">
+  <div class="mobileNav">
+    <img src="./images/icon-close-menu.svg" alt="close button">
+  </div>
   <nav class="navbar" id="navbar">
     <div class="navLeft">
       <ul class="nav-items">
@@ -81,7 +84,7 @@
       <button class="registerBtn">Register</button>
       <img class="hamburgerMenu" src="./images/icon-menu.svg" alt="hamburger menu">
     </div>
-  </nav>
+  </nav> 
 
   <section class="container">
     <div class="innerLeftCont">
