--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
   <main class="mainContent">
   <div class="mobileNav">
-    <img src="./images/icon-close-menu.svg" alt="close button">
+    <div class="imgDiv">
+      <img src="./images/icon-close-menu.svg" alt="close button">
+    </div>
   </div>
   <nav class="navbar" id="navbar">
     <div class="navLeft">
