transition and background opacity

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 <body>
   <main class="mainContent">
   <div class="mobileNav">
-    <div class="imgDiv">
-      <img src="./images/icon-close-menu.svg" alt="close button">
+    <div class="mobileNavContent">
+      <div class="imgDiv">
+        <img src="./images/icon-close-menu.svg" alt="close button">
+      </div>
     </div>
   </div>
   <nav class="navbar" id="navbar">
