feat click event on hamburger and close icons

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <title>Frontend Mentor | Intro section with dropdown navigation</title>
 </head>
 <body>
-  <main class="mainContent">
-  <div class="mobileNav">
+<main class="mainContent">
+  <div class="mobileNav" id="mobileNav">
     <div class="mobileNavContent">
       <div class="imgDiv">
-        <img src="./images/icon-close-menu.svg" alt="close button">
+        <img class="closeNavX"src="./images/icon-close-menu.svg" alt="close button">
       </div>
     </div>
   </div>
@@ -86,7 +86,7 @@
     <div class="navRight">
       <a href="#" class="loginBtn">Login</a>
       <button class="registerBtn">Register</button>
-      <img class="hamburgerMenu" src="./images/icon-menu.svg" alt="hamburger menu">
+      <img id="hamburgerIcon" class="hamburgerMenu" src="./images/icon-menu.svg" alt="hamburger menu">
     </div>
   </nav> 
 
