removed log and putting content in nav mobile

--- a/index.html
+++ b/index.html
@@ -18,6 +18,30 @@
       <div class="imgDiv">
         <img class="closeNavX" src="./images/icon-close-menu.svg" alt="close button">
       </div>
+      <div>
+        <ul>
+          <li>
+            <a href="#">
+              Features
+            </a>
+          </li>
+          <li>
+            <a href="#">
+             Company
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              Careers
+            </a>
+          </li> 
+          <li>
+            <a href="#">
+              About
+            </a>
+          </li>
+        </ul>
+      </div>    
     </div>
   </div>
   <nav class="navbar" id="navbar">
