minor edits to padding and centering on mobile

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div class="innerLeftCont">
       <header id="main-header">
         <h1 id="main-text">
-          Make <br>remote work
+          Make <br id="br">remote work
         </h1>
       </header>
       <div class="aboutTextCont">
