settung up ul in mobile pov

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <div class="imgDiv">
         <img class="closeNavX" src="./images/icon-close-menu.svg" alt="close button">
       </div>
-      <div>
-        <ul>
+      <div class="ulCont">
+        <ul class="ulMobileNav">
           <li>
             <a href="#">
               Features
