added arrow down icons

--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
         <ul class="ulMobileNav">
           <li>
             <a href="#">
-              Features
+              Features 
+              <img src="./images/icon-arrow-down.svg" alt="arrow down">
             </a>
           </li>
           <li>
             <a href="#">
-             Company
+             Company 
+             <img src="./images/icon-arrow-down.svg" alt="arrow down">
             </a>
           </li>
           <li>
