height to ul and added login, register btns

--- a/index.html
+++ b/index.html
@@ -42,8 +42,12 @@
               About
             </a>
           </li>
+          
+          <!-- <a href="#" class="loginBtn">Login</a>
+          <button class="registerBtn">Register</button> 
+   -->
         </ul>
-      </div>    
+      </div>   
     </div>
   </div>
   <nav class="navbar" id="navbar">
