feat login and register buttons

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
               About
             </a>
           </li>
-          
-          <!-- <a href="#" class="loginBtn">Login</a>
-          <button class="registerBtn">Register</button> 
-   -->
         </ul>
-      </div>   
+      </div>
+      <div class="loginRegisterNav">
+        <a href="#">Login</a>
+        <button class="registerBtnMob">Register</button> 
+      </div>  
     </div>
   </div>
   <nav class="navbar" id="navbar">
