added ul to mobile content

--- a/index.html
+++ b/index.html
@@ -25,12 +25,22 @@
               Features 
               <img src="./images/icon-arrow-down.svg" alt="arrow down">
             </a>
+            <ul class="dropdownFeatMob">
+              <li>fh</li>
+              <li>fkg</li>
+              <li>figk</li>
+              <li>fkfg</li>
+            </ul>
           </li>
           <li>
             <a href="#">
              Company 
              <img src="./images/icon-arrow-down.svg" alt="arrow down">
             </a>
+            <ul class="dropdownCompMob">
+              <li>fig</li>
+              <li>opdk</li>
+            </ul>
           </li>
           <li>
             <a href="#">
