feat content to mobile dropdown and images

--- a/index.html
+++ b/index.html
@@ -26,10 +26,20 @@
               <img src="./images/icon-arrow-down.svg" alt="arrow down">
             </a>
             <ul class="dropdownFeatMob">
-              <li>fh</li>
-              <li>fkg</li>
-              <li>figk</li>
-              <li>fkfg</li>
+              <li>
+                <img src="./images/icon-todo.svg" alt="todo image">
+                Todo List
+              </li>
+              <li>
+                <img src="./images/icon-calendar.svg" alt="calendar image">
+                Calendar
+              </li>
+              <li>
+                <img src="./images/icon-reminders.svg" alt="reminders image">
+                Reminders</li>
+              <li>
+                <img src="./images/icon-planning.svg" alt="planning image">
+                Planning</li>
             </ul>
           </li>
           <li>
@@ -38,8 +48,9 @@
              <img src="./images/icon-arrow-down.svg" alt="arrow down">
             </a>
             <ul class="dropdownCompMob">
-              <li>fig</li>
-              <li>opdk</li>
+              <li>History</li>
+              <li>Our Team</li>
+              <li>Blog</li>
             </ul>
           </li>
           <li>
