optimized js variables

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <a href="#">
               Features 
               <img src="./images/icon-arrow-down.svg" alt="arrow down">
+              <img src="./images/icon-arrow-up.svg" alt="arrow up">
             </a>
             <ul class="dropdownFeatMob">
               <li>
@@ -46,6 +47,7 @@
             <a href="#">
              Company 
              <img src="./images/icon-arrow-down.svg" alt="arrow down">
+             <img src="./images/icon-arrow-up.svg" alt="arrow up">
             </a>
             <ul class="dropdownCompMob">
               <li>History</li>
