loops through elements

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           <li>
             <a href="#">
               Features 
-              <img src="./images/icon-arrow-down.svg" alt="arrow down">
-              <img src="./images/icon-arrow-up.svg" alt="arrow up">
+              <img class="arrowDownMob" src="./images/icon-arrow-down.svg" alt="arrow down">
+              <img class="arrowUpMob" src="./images/icon-arrow-up.svg" alt="arrow up">
             </a>
             <ul class="dropdownFeatMob">
               <li>
@@ -46,8 +46,8 @@
           <li>
             <a href="#">
              Company 
-             <img src="./images/icon-arrow-down.svg" alt="arrow down">
-             <img src="./images/icon-arrow-up.svg" alt="arrow up">
+             <img class="arrowDownMob" src="./images/icon-arrow-down.svg" alt="arrow down">
+             <img class="arrowUpMob" src="./images/icon-arrow-up.svg" alt="arrow up">
             </a>
             <ul class="dropdownCompMob">
               <li>History</li>
