adding click events to ele

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="ulCont">
         <ul class="ulMobileNav">
           <li>
-            <a href="#">
+            <a href="#" id="featuresMobileNav">
               Features 
               <img class="arrowDownMob" src="./images/icon-arrow-down.svg" alt="arrow down">
               <img class="arrowUpMob" src="./images/icon-arrow-up.svg" alt="arrow up">
@@ -44,7 +44,7 @@
             </ul>
           </li>
           <li>
-            <a href="#">
+            <a href="#" id="companyMobileNav">
              Company 
              <img class="arrowDownMob" src="./images/icon-arrow-down.svg" alt="arrow down">
              <img class="arrowUpMob" src="./images/icon-arrow-up.svg" alt="arrow up">
