--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
           <img src="./images/logo.svg" alt="snap logo top left navbar" class="nav-logo">
         </a>
         <li class="nav-item" id="features">
-          <a href="#" onmouseover="getArrowUpImg1()" onmouseout="getArrowDownImg1()">
+          <a href="#" onclick="getArrowUpImg1(this)" 
+          >
+          <!-- onmouseout="getArrowDownImg1()" -->
             Features
             <img class="arrowDown" src="./images/icon-arrow-down.svg" alt="arrow down image">
           </a>
@@ -106,7 +108,8 @@
           </div>
         </li>
         <li class="nav-item" id="company">
-          <a href="#" onmouseover="getArrowUpImg2()" onmouseout="getArrowDownImg2()">
+          <a href="#" onclick="getArrowUpImg2()">
+            <!-- onmouseout="getArrowDownImg2()" -->
            Company
             <img class="arrowDown" src="./images/icon-arrow-down.svg" alt="arrow down image"> 
           </a>
